ui gefixed; reset für rating hinzugefügt; noch kein reset für releasejahr, lösungsansätze noch drinnen