@@ -17,10 +17,7 @@ import javafx.scene.control.TextField;
 
 import java.io.IOException;
 import java.net.URL;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
-import java.util.ResourceBundle;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class HomeController implements Initializable {
@@ -31,10 +28,10 @@ public class HomeController implements Initializable {
     public TextField searchField;
 
     @FXML
-    public JFXListView movieListView;
+    public JFXListView<Movie> movieListView;
 
     @FXML
-    public JFXComboBox<Genre> genreComboBox;
+    public JFXComboBox<String> genreComboBox;
 
     @FXML
     public JFXButton sortBtn;
@@ -46,11 +43,8 @@ public class HomeController implements Initializable {
     public JFXComboBox<Double> ratingComboBox;
 
     public List<Movie> allMovies;
-
     protected ObservableList<Movie> observableMovies = FXCollections.observableArrayList();
-
     protected SortedState sortedState;
-
     private MovieAPI movieAPI = new MovieAPI();
 
     @Override
@@ -61,9 +55,9 @@ public class HomeController implements Initializable {
 
     public void initializeState() {
         try {
-            List<Movie> moviesFromApi = movieAPI.fetchMovies();
+            allMovies = movieAPI.fetchMovies();
             observableMovies.clear();
-            observableMovies.addAll(moviesFromApi);
+            observableMovies.addAll(allMovies);
             sortedState = SortedState.NONE;
         } catch (IOException e) {
             e.printStackTrace();
@@ -74,145 +68,89 @@ public class HomeController implements Initializable {
         movieListView.setItems(observableMovies);
         movieListView.setCellFactory(movieListView -> new MovieCell());
 
-        genreComboBox.getItems().add(null);
-        genreComboBox.getItems().addAll(Genre.values());
+        genreComboBox.getItems().add("No filter");
+        Arrays.stream(Genre.values()).map(Enum::toString).forEach(genreComboBox.getItems()::add);
+        genreComboBox.setPromptText("Filter by Genre");
+
+//        releaseYearComboBox.getItems().add("No filter");
+//        releaseYearComboBox.getItems().add(null);
+//        releaseYearComboBox.getItems().addAll(2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020);
+//        releaseYearComboBox.setPromptText("Select Year");
+//
+//        ratingComboBox.getItems().add("No filter");
+//        ratingComboBox.getItems().add(null);
+//        ratingComboBox.getItems().addAll(1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0);
+//        ratingComboBox.setPromptText("Select Rating");
+
+//        if (!releaseYearComboBox.getItems().contains(null)) {
+//            releaseYearComboBox.getItems().add(null);
+//        }
 
         releaseYearComboBox.getItems().addAll(2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007, 2006, 2005, 2004, 2003, 2002, 2001, 2000);
         releaseYearComboBox.setPromptText("Select Year");
 
-        ratingComboBox.getItems().addAll(1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 8.2, 8.8, 9.0, 10.0);
+//        if (!ratingComboBox.getItems().contains(null)) {
+//            ratingComboBox.getItems().add(null);
+//        }
+        ratingComboBox.getItems().addAll(0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0);
         ratingComboBox.setPromptText("Select Rating");
     }
 
     public void sortMovies() {
-        if (sortedState == SortedState.NONE || sortedState == SortedState.DESCENDING) {
-            sortMovies(SortedState.ASCENDING);
-        } else if (sortedState == SortedState.ASCENDING) {
-            sortMovies(SortedState.DESCENDING);
-        }
+        sortMovies(sortedState == SortedState.ASCENDING ? SortedState.DESCENDING : SortedState.ASCENDING);
     }
 
     public void sortMovies(SortedState sortDirection) {
-        if (sortDirection == SortedState.ASCENDING) {
-            observableMovies.sort(Comparator.comparing(Movie::getTitle));
-            sortedState = SortedState.ASCENDING;
-        } else {
-            observableMovies.sort(Comparator.comparing(Movie::getTitle).reversed());
-            sortedState = SortedState.DESCENDING;
-        }
+        observableMovies.sort(sortDirection == SortedState.ASCENDING ?
+                Comparator.comparing(Movie::getTitle) :
+                Comparator.comparing(Movie::getTitle).reversed());
+        sortedState = sortDirection;
     }
 
     public List<Movie> filterByQuery(List<Movie> movies, String query) {
         if (query == null || query.isEmpty()) return movies;
         return movies.stream()
-                .filter(Objects::nonNull)
-                .filter(movie ->
-                        movie.getTitle().toLowerCase().contains(query.toLowerCase()) ||
-                                movie.getDescription().toLowerCase().contains(query.toLowerCase())
-                )
-                .collect(Collectors.toList());
+                .filter(movie -> movie.getTitle().toLowerCase().contains(query.toLowerCase()) ||
+                        movie.getDescription().toLowerCase().contains(query.toLowerCase()))
+                .toList();
     }
 
-    public List<Movie> filterByGenre(List<Movie> movies, Genre genre) {
-        if (genre == null) return movies;
-        return movies.stream()
-                .filter(Objects::nonNull)
-                .filter(movie -> movie.getGenres().contains(genre))
-                .collect(Collectors.toList());
+    public List<Movie> filterByGenre(List<Movie> movies, String genre) {
+        if (genre == null || genre.equals("No filter")) return movies;
+        Genre selectedGenre = Genre.valueOf(genre);
+        return movies.stream().filter(movie -> movie.getGenres().contains(selectedGenre)).toList();
     }
 
     public List<Movie> filterByReleaseYear(List<Movie> movies, Integer releaseYear) {
-        return movies.stream()
-                .filter(movie -> movie.getReleaseYear() == releaseYear)
-                .collect(Collectors.toList());
+        return (releaseYear == null) ? movies : movies.stream().filter(movie -> movie.getReleaseYear() == releaseYear).toList();
     }
 
     public List<Movie> filterByRating(List<Movie> movies, Double rating) {
-        return movies.stream()
-                .filter(movie -> movie.getRating() >= rating)
-                .collect(Collectors.toList());
+        return (rating == null) ? movies : movies.stream().filter(movie -> movie.getRating() >= rating).toList();
     }
 
-    public void applyAllFilters(String searchQuery, Object genre) {
-        List<Movie> filteredMovies = allMovies;
-
-        if (searchQuery != null && !searchQuery.isEmpty()) {
-            filteredMovies = filterByQuery(filteredMovies, searchQuery);
-        }
-
-        if (genre != null) {
-            filteredMovies = filterByGenre(filteredMovies, (Genre) genre);
-        }
-
-        observableMovies.clear();
-        observableMovies.addAll(filteredMovies);
-    }
-
-    public void searchBtnClicked(ActionEvent actionEvent) {
+    public void applyAllFilters() {
         String searchQuery = searchField.getText().trim().toLowerCase();
-        Genre selectedGenre = genreComboBox.getValue();
+        String selectedGenre = genreComboBox.getValue();
         Integer releaseYear = releaseYearComboBox.getValue();
         Double rating = ratingComboBox.getValue();
 
-        try {
-            List<Movie> filteredMovies;
-            if (selectedGenre != null && releaseYear != null && rating != null) {
-                filteredMovies = movieAPI.fetchMoviesWithFilters(
-                        searchQuery,
-                        selectedGenre.toString(),
-                        releaseYear.toString(),
-                        rating.toString());
-            } else {
-                filteredMovies = movieAPI.fetchMovies();
-                filteredMovies = filterByQuery(filteredMovies, searchQuery);
-                if (selectedGenre != null) {
-                    filteredMovies = filterByGenre(filteredMovies, selectedGenre);
-                }
-                if (releaseYear != null) {
-                    filteredMovies = filterByReleaseYear(filteredMovies, releaseYear);
-                }
-                if (rating != null) {
-                    filteredMovies = filterByRating(filteredMovies, rating);
-                }
-            }
-            observableMovies.clear();
-            observableMovies.addAll(filteredMovies);
-            sortMovies(sortedState);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        List<Movie> filteredMovies = allMovies;
+        if (!searchQuery.isEmpty()) filteredMovies = filterByQuery(filteredMovies, searchQuery);
+        filteredMovies = filterByGenre(filteredMovies, selectedGenre);
+        filteredMovies = filterByReleaseYear(filteredMovies, releaseYear);
+        filteredMovies = filterByRating(filteredMovies, rating);
+
+        observableMovies.clear();
+        observableMovies.addAll(filteredMovies);
+        sortMovies(sortedState);
+    }
+
+    public void searchBtnClicked(ActionEvent actionEvent) {
+        applyAllFilters();
     }
 
     public void sortBtnClicked(ActionEvent actionEvent) {
         sortMovies();
-    }
-
-    public String getMostPopularActor(List<Movie> movies) {
-        return movies.stream()
-                .flatMap(movie -> movie.getMainCast().stream())
-                .collect(Collectors.groupingBy(actor -> actor, Collectors.counting()))
-                .entrySet().stream()
-                .max(Comparator.comparingLong(entry -> entry.getValue()))
-                .map(entry -> entry.getKey())
-                .orElse("Unknown Actor");
-    }
-
-    public int getLongestMovieTitle(List<Movie> movies) {
-        return movies.stream()
-                .mapToInt(movie -> movie.getTitle().length())
-                .max()
-                .orElse(0);
-    }
-
-    public long countMoviesFrom(List<Movie> movies, String director) {
-        return movies.stream()
-                .filter(movie -> movie.getDirector().equalsIgnoreCase(director))
-                .count();
-    }
-
-    public List<Movie> getMoviesBetweenYears(List<Movie> movies, int startYear, int endYear) {
-        return movies.stream()
-                .filter(movie -> movie.getReleaseYear() >= startYear && movie.getReleaseYear() <= endYear)
-                .collect(Collectors.toList());
     }
 }
